# BreakoutClone

./: CMakeLists.txt
Engine/: CMakeLists.txt
Engine/include/Engine/: Object2D.h  SpriteRenderer2D.h  Texture.h  Window.h
Engine/src/: Object2D.cpp  Shader.cpp  SpriteRenderer2D.cpp  Texture.cpp  Window.cpp
Engine/xtra/: Object.h  Vertex.h
include/Game/: Game.h  Level.h  Player.h  Powerup.h  Tile.h
levels/: level1.txt
shaders/: shader.fs
src/: CMakeLists.txt  Face.h  Face2.h  Game.cpp  Game.h  Level.cpp  Level.h  Player.cpp  Powerup.cpp  Tile.cpp  main.cpp
src/Engine/: CMakeLists.txt  main.cpp
src/Engine/Engine/: Camera.h  Object2D.h  ResourceManager.h  Shader.h  SpriteRenderer2D.h  Texture.h  Window.h
src/shaders/: shader.fs  shader.vs
